[package]
name = "atari800-rs"
version = "0.1.0"
authors = ["mypalmike"]
edition = "2018"
required-features = ["unsafe_textures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
# sdl2 = "0.32"

[features]
unsafe_textures = []

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["unsafe_textures"]
